--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <div class="navigation-bar">
     <nav class="container">
       <h1>Fun Bus</h1>
-      <div class=nav buttons>
+      <div class=nav-buttons>
         <a href="#">Home</a>
         <a href="#">About Us</a>
         <a href="#">Blog</a>
